--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "loading": "^1.13.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^3.2.2",
     "react-redux": "^5.1.1",
     "react-scripts": "1.1.1",
     "react-thunk": "^1.0.0",
