--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-icons": "^3.2.2",
     "react-redux": "^5.1.1",
     "react-redux-loading": "^1.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
